@@ -4,4 +4,5 @@ MAINTAINERCLEANFILES=Makefile.in config.guess config.sub install-sh \
 
 dist-hook:
 	find "${distdir}" -type d -name CVS -print0 | xargs -0 rm -rf
+	find "${distdir}" -type d -name .svn -print0 | xargs -0 rm -rf
 
